# say-to-any

./: .gitignore  AGENTS.md  README.md
.codex/skills/react-flow/: SKILL.MD
.codex/skills/sukiui-avalonia/: SKILL.md
scripts/: package-pc.ps1
src/frontend/: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  react-router.config.ts  vite.config.ts
src/frontend/app/: app.css  root.tsx  routes.ts
src/pc/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest  pc.csproj  pc.sln
src/pc/Models/: AppSettings.cs  ApplicationDataFile.cs  AudioDeviceInfo.cs  DictationHistoryGroup.cs  DictationHistoryItem.cs
src/pc/Services/: AppUpdateService.cs  AudioLevelCalculator.cs  GlobalHotkeyService.cs  MacGlobalHotkeyService.cs  MacMicrophoneLevelMonitor.cs  MacMicrophoneRecorder.cs  MacProcess.cs  MacTextInsertionService.cs  MicrophoneLevelMonitor.cs  MicrophoneRecorder.cs  OpenAiCompatibleClient.cs  PlatformServiceContracts.cs  RecordingFilePaths.cs  SettingsStore.cs  TextInsertionService.cs  UnsupportedGlobalHotkeyService.cs
src/pc/Styles/: WindowDrawnDecorations.axaml
src/pc/ViewModels/: MainWindowViewModel.cs  MicrophoneDialogViewModel.cs  MicrophoneOptionViewModel.cs  PreferencesDialogViewModel.cs  (+1 more)
src/server/: CLAUDE.md  SqlBoTx.slnx
src/tauriRust/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/tauriRust/src-tauri/: Cargo.toml  tauri.conf.json
src/tauriRust/src-tauri/.cargo/: config.toml
src/tauriRust/src-tauri/capabilities/: default.json
src/tauriRust/src-tauri/src/: lib.rs  main.rs
(+142 files in other folders)
